--- a/css/responsive.css
+++ b/css/responsive.css
@@ -215,6 +215,10 @@
         padding-right: 0;
     }
 
+    .main-menu ul li {
+        margin-left: 8px;
+    }
+
 }
 
 
@@ -222,11 +226,12 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
     .header-main-area .logo {
-        padding-top: 18px;
+        padding-top: 5px;
     }
 
     .logo {
-        padding-top: 18px;
+        padding-top: 5px;
+        width: 80%;
     }
 
     .header-bottom-icon {
@@ -415,7 +420,8 @@
     }
 
     .header-bottom-area {
-        padding-top: 18px;
+        padding-top: 10px;
+
     }
 
     .header-bottom-icon ul li a {
@@ -427,10 +433,6 @@
         left: 25px;
     }
 
-    .header-bottom-area {
-        padding-top: 30px;
-        padding-bottom: 18px;
-    }
 
     .slider-content-2 {
         padding-top: 49px;
@@ -772,7 +774,11 @@
     }
 
     .header-bottom-area.header-sticky.sticky {
-        padding-top: 26px;
+        padding-top: 10px;
+    }
+
+    .logo {
+        width: 90%;
     }
 
     .slider-content-3 {
@@ -794,9 +800,12 @@
         font-size: 20px;
     }
 
+
 }
 
+
 /* Large Mobile :480px. */
+
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     .container {
@@ -1207,4 +1216,24 @@
 
 
 
+}
+
+@media  only screen and (max-width:425px) {
+    
+    .nav-link{
+        padding: .3rem .5rem !important;
+        font-size: 14px;
+    }
+    .hide-mobile{
+        display: none;
+    }
+
+    .filter-button{
+        font-size: 12px;
+    }
+
+    .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
 }
